--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "professional-portfolio",
   "version": "0.1.0",
+  "homepage": "https://SeanInches.github.io/Professional-Portfolio",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -17,6 +18,8 @@
     "yarn": "^1.22.18"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
